<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.GuessByText">

    <EditText
        android:id="@+id/textInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/enter_number"
        android:inputType="number"
        android:padding="20dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/guessButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guess"
        app:layout_constraintEnd_toEndOf="@id/textInput"
        app:layout_constraintStart_toStartOf="@id/textInput"
        app:layout_constraintTop_toBottomOf="@id/textInput" />

    <ImageView
        android:id="@+id/diceImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="731dp"
        app:srcCompat="@drawable/empty_dice"
        app:layout_constraintTop_toBottomOf="@id/guessButton"
        app:layout_constraintStart_toStartOf="@id/guessButton"
        app:layout_constraintEnd_toEndOf="@id/guessButton"
        android:contentDescription="@string/dice_img_desc" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/diceImage"
        app:layout_constraintStart_toStartOf="@id/diceImage"
        app:layout_constraintTop_toBottomOf="@id/diceImage">

        <TextView
            android:id="@+id/scoreTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="50dp"
            android:text="@string/score"
            android:textAlignment="center"
            android:textColor="@color/purple_700" />

        <TextView
            android:id="@+id/scoreValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="50dp"
            android:textAlignment="center"
            android:textColor="@color/purple_700" />

    </LinearLayout>

    <Button
        android:id="@+id/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>