<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.GuessByVoice">

    <ImageView
        android:id="@+id/diceImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/dice_img_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guessButton"
        app:srcCompat="@drawable/empty_dice" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/diceImage"
        app:layout_constraintStart_toStartOf="@id/diceImage"
        app:layout_constraintTop_toBottomOf="@id/diceImage">

        <TextView
            android:id="@+id/scoreTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="50dp"
            android:text="@string/score"
            android:textAlignment="center"
            android:textColor="@color/purple_700" />

        <TextView
            android:id="@+id/scoreValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="50dp"
            android:text="@string/score_value"
            android:textAlignment="center"
            android:textColor="@color/purple_700"/>
    </LinearLayout>

    <Button
        android:id="@+id/doneButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="91dp"
        android:text="@string/done_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>